--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ Flask==2.3.3
 Flask-SQLAlchemy==3.0.5
 Flask-Login==0.6.3
 Flask-Migrate==4.0.5
-tgtg>=0.13.0
-sib-api-v3-sdk>=7.6.0
-schedule>=1.2.0
 python-dotenv>=1.0.0
-werkzeug>=2.3.0
+sib-api-v3-sdk>=7.6.0
+tgtg>=0.13.0
+schedule>=1.2.0
 cryptography>=41.0.0
+Werkzeug>=2.3.0
